--- a/alliance-form.html
+++ b/alliance-form.html
@@ -288,15 +288,15 @@
       <button class="btn-next" onclick="startForm()">I'm ready to lead this change →</button>
     </div>
 
-    <!-- All other steps unchanged -->
-    <!-- ... (your existing steps 2–9) ... -->
+    <!-- All your other steps (2–9) remain exactly as you had them -->
+    <!-- ... (paste your existing steps here) ... -->
 
   </div>
 </div>
 
 <script>
-  // Your existing script (with all onclick="nextStep()" and onclick="submitForm()" already correct)
-  // Just make sure the first button now calls startForm()
+  // Your full existing script (unchanged — it already works for nextStep() and submitForm())
+  // Just ensure the first button now has ()
 </script>
 </body>
 </html>
