--- a/index.html
+++ b/index.html
@@ -106,7 +106,20 @@
 <body class="bg-page text-slate-900 antialiased">
 
   <!-- Sticky Header -->
-  <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-xl border-b border-slate-200/50 shadow-sm transition-all duration-300">
+  <header>
+  <div class="nav-container">
+    <div class="logo">
+      <img src="images/Logo1.png" alt="TichaAfrica Logo">
+      <span>TichaAfrica</span>
+    </div>
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="Share-your-journey.html">Teachers</a>
+      <a href="alliance-form.html">Institutions</a>
+    </nav>
+  </div>
+</header>
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <img src="images/logo1.png" alt="TichaAfrica" class="h-16 md:h-20 drop-shadow-lg transition-transform hover:scale-105" />
       <a href="Alliance-form.html" class="hidden sm:inline-flex items-center gap-2 bg-gradient-gold text-slate-900 font-bold px-6 py-2.5 rounded-full shadow-lg hover:shadow-xl hover:-translate-y-0.5 transition-all duration-300">
