--- a/alliance-form.html
+++ b/alliance-form.html
@@ -28,6 +28,20 @@
   </style>
 </head>
 <body>
+  <header>
+  <div class="nav-container">
+    <div class="logo">
+      <img src="images/Logo1.png" alt="TichaAfrica Logo">
+      <span>TichaAfrica</span>
+    </div>
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="Share-your-journey.html">Teachers</a>
+      <a href="alliance-form.html">Institutions</a>
+    </nav>
+  </div>
+  </header>
 <div class="wrap">
   <div class="card">
     <div class="progress" id="progress"></div>
