--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 
+<header>
+  <nav class="nav">
+    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo" />
+    <div>
+      <a href="teacher.html">Teachers</a>
+      <a href="institutional.html">Institutions</a>
+    </div>
+  </nav>
+</header>
