--- a/teacher.html
+++ b/teacher.html
@@ -8,3 +8,5 @@
     </div>
   </nav>
 </header>
+<head><link rel="stylesheet" href="styles.css" />
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet"></head>
