--- a/teacher.html
+++ b/teacher.html
@@ -1,12 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>TichaAfrica — Teachers</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+</head>
+<body>
 
 <header>
   <nav class="nav">
-    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo" />
-    <div>
-      <a href="teacher.html">Teachers</a>
+    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo">
+    <div class="nav-links">
+      <a href="teachers.html" class="active cta">Teachers</a>
       <a href="institutional.html">Institutions</a>
     </div>
   </nav>
 </header>
-<head><link rel="stylesheet" href="styles.css" />
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet"></head>
+
+<section class="container">
+  <h1>Teachers Are the Architects of Africa’s AI Future</h1>
+  <p>
+    TichaAfrica is mobilising educators across the continent to lead,
+    not follow, the integration of Artificial Intelligence in education.
+  </p>
+  <a href="#" class="btn-primary">Join the Teacher Alliance</a>
+</section>
+
+<section class="section-muted">
+  <div class="container card">
+    <h2>Why This Matters</h2>
+    <p>
+      African teachers already adapt, innovate, and contextualise learning.
+      TichaAfrica equips them with the competence, confidence, and community
+      to shape how Artificial Intelligence serves African classrooms.
+    </p>
+  </div>
+</section>
+
+<footer>
+  <p>© TichaAfrica. Empowering Educators for the AI Age.</p>
+</footer>
+
+</body>
+</html>
