--- a/institutional.html
+++ b/institutional.html
@@ -1,12 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>TichaAfrica — Institutions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+</head>
+<body>
 
 <header>
   <nav class="nav">
-    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo" />
-    <div>
-      <a href="teacher.html">Teachers</a>
-      <a href="institutional.html">Institutions</a>
+    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo">
+    <div class="nav-links">
+      <a href="teachers.html">Teachers</a>
+      <a href="institutional.html" class="active">Institutions</a>
     </div>
   </nav>
 </header>
-<head><link rel="stylesheet" href="styles.css" />
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet"> </head>
+
+<section class="container">
+  <h1>A Teacher-Led Pan-African Education Infrastructure</h1>
+  <p>
+    TichaAfrica is a structured, standards-aligned initiative supporting
+    governments, development partners, and institutions to implement
+    ethical, inclusive Artificial Intelligence integration in education.
+  </p>
+</section>
+
+<section class="section-dark">
+  <div class="container card">
+    <h2>Institutional Alignment</h2>
+    <p>
+      Our framework aligns with continental and global priorities,
+      including teacher professional development, digital competence,
+      equity, and responsible Artificial Intelligence adoption.
+    </p>
+  </div>
+</section>
+
+<footer>
+  <p>© TichaAfrica. Partnering for Sustainable Education Systems.</p>
+</footer>
+
+</body>
+</html>
