--- a/index.html
+++ b/index.html
@@ -1,60 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TichaAfrica</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>TichaAfrica — Teach Smart, Lead Change</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 
-<body data-page="home">
+<body>
 
-<!-- HEADER -->
 <div id="site-header"></div>
 
-<!-- HERO -->
-<section class="container">
-  <h1>Building Africa’s Artificial Intelligence Education Future</h1>
-  <p>
-    TichaAfrica is a teacher-led continental initiative supporting
-    ethical, inclusive, and context-aware integration of Artificial
-    Intelligence in African education systems.
-  </p>
-</section>
-
-<!-- PATH SELECTION -->
-<section class="section-muted">
-  <div class="container" style="display:grid; gap:2.5rem;">
-
-    <div class="card">
-      <h2>For Teachers</h2>
-      <p>
-        Join a growing alliance of African educators shaping how Artificial
-        Intelligence enters classrooms, curricula, and learning cultures.
-      </p>
-      <a href="teachers.html" class="btn-primary">Enter Teacher Space</a>
-    </div>
-
-    <div class="card">
-      <h2>For Institutions</h2>
-      <p>
-        Learn how TichaAfrica aligns with education policy, professional
-        development frameworks, and responsible Artificial Intelligence
-        standards.
-      </p>
-      <a href="institutional.html" class="btn-primary">View Institutional Overview</a>
-    </div>
-
+<section class="section-light">
+  <div class="container">
+    <h1>Teachers are shaping Africa’s AI future</h1>
+    <p>
+      TichaAfrica is a teacher-led movement ensuring that artificial intelligence
+      in education reflects African classrooms, cultures, and values.
+    </p>
+    <a href="teachers.html" class="btn-primary">Join the Teacher Alliance</a>
   </div>
 </section>
 
-<!-- FOOTER -->
 <div id="site-footer"></div>
-
-<!-- INCLUDES -->
 <script src="includes.js"></script>
-
 </body>
 </html>
