--- a/institutional.html
+++ b/institutional.html
@@ -1,47 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TichaAfrica — Institutions</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Institutions — TichaAfrica</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
-
-<header>
-  <nav class="nav">
-    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo">
-    <div class="nav-links">
-      <a href="teachers.html">Teachers</a>
-      <a href="institutional.html" class="active">Institutions</a>
-    </div>
-  </nav>
-</header>
-
-<section class="container">
-  <h1>A Teacher-Led Pan-African Education Infrastructure</h1>
-  <p>
-    TichaAfrica is a structured, standards-aligned initiative supporting
-    governments, development partners, and institutions to implement
-    ethical, inclusive Artificial Intelligence integration in education.
-  </p>
-</section>
+<div id="site-header"></div>
 
 <section class="section-dark">
-  <div class="container card">
-    <h2>Institutional Alignment</h2>
+  <div class="container">
+    <h1>Institutional Overview</h1>
     <p>
-      Our framework aligns with continental and global priorities,
-      including teacher professional development, digital competence,
-      equity, and responsible Artificial Intelligence adoption.
+      TichaAfrica is a pan-African, teacher-led initiative aligned with continental
+      and global education priorities on digital transformation and ethical
+      artificial intelligence.
+    </p>
+    <p>
+      We collaborate with governments, development partners, and education
+      stakeholders to ensure teachers are active participants in policy,
+      curriculum, and implementation.
     </p>
   </div>
 </section>
 
-<footer>
-  <p>© TichaAfrica. Partnering for Sustainable Education Systems.</p>
-</footer>
-
+<div id="site-footer"></div>
+<script src="includes.js"></script>
 </body>
 </html>
