--- a/teachers.html
+++ b/teachers.html
@@ -1,30 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Teachers — TichaAfrica</title>
-  <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Teacher — Join TichaAfrica</title>
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-<div id="site-header"></div>
 
-<section class="section-muted">
-  <div class="container">
-    <h1>Founding Teacher Alliance</h1>
-    <p>
-      This alliance brings together educators across Africa to co-create,
-      guide, and safeguard the use of artificial intelligence in classrooms.
-    </p>
-    <p>
-      Founding teachers contribute insight, test tools, and shape practice
-      grounded in lived classroom experience.
-    </p>
+<!-- HEADER -->
+<div w3-include-html="partials/header.html"></div>
+
+<section class="hero section-light">
+  <h1>Empower Your Classroom with AI</h1>
+  <p>Sign up to become a founding teacher and lead Africa's AI transformation in education.</p>
+  <div style="margin-top:2rem;">
+    <a href="teacher-form.html" class="btn-primary">Sign Up as Teacher</a>
   </div>
 </section>
 
-<div id="site-footer"></div>
-<script src="includes.js"></script>
+<section class="section-muted container" style="margin-top:3rem;">
+  <div class="card fade-up">
+    <h3>Lead Change</h3>
+    <p>Be part of a select group shaping AI tools for African classrooms.</p>
+  </div>
+  <div class="card fade-up">
+    <h3>Develop Skills</h3>
+    <p>Gain leadership recognition and digital credentials.</p>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<div w3-include-html="partials/footer.html"></div>
+<script src="include.js"></script>
+<script>includeHTML();</script>
 </body>
 </html>
