--- a/institutional.html
+++ b/institutional.html
@@ -1,32 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Institutions — TichaAfrica</title>
-  <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Institution — Partner with TichaAfrica</title>
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-<div id="site-header"></div>
 
-<section class="section-dark">
-  <div class="container">
-    <h1>Institutional Overview</h1>
-    <p>
-      TichaAfrica is a pan-African, teacher-led initiative aligned with continental
-      and global education priorities on digital transformation and ethical
-      artificial intelligence.
-    </p>
-    <p>
-      We collaborate with governments, development partners, and education
-      stakeholders to ensure teachers are active participants in policy,
-      curriculum, and implementation.
-    </p>
+<!-- HEADER -->
+<div w3-include-html="partials/header.html"></div>
+
+<section class="hero section-light">
+  <h1>Partner to Transform Learning</h1>
+  <p>Join us to support teacher-led AI initiatives and shape Africa’s educational future.</p>
+  <div style="margin-top:2rem;">
+    <a href="institution-form.html" class="btn-primary">Partner With Us</a>
   </div>
 </section>
 
-<div id="site-footer"></div>
-<script src="includes.js"></script>
+<section class="section-muted container" style="margin-top:3rem;">
+  <div class="card fade-up">
+    <h3>Influence Policy</h3>
+    <p>Shape continental AI strategy and classroom practice with teachers.</p>
+  </div>
+  <div class="card fade-up">
+    <h3>Support Skills Growth</h3>
+    <p>Help teachers gain recognition, leadership, and digital credentials.</p>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<div w3-include-html="partials/footer.html"></div>
+<script src="include.js"></script>
+<script>includeHTML();</script>
 </body>
 </html>
