--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <div data-include="/partials/header.html"></div>
 
 <section class="section">
-  <h1>A teacher led movement shaping Africas learning future</h1>
-  <p>TichaAfrica mobilises teachers to co create responsible use of technology in African classrooms starting with collective leadership not tools.</p>
+  <h1>A teacher-led movement shaping Africa's learning future</h1>
+  <p>TichaAfrica brings together African teachers to co-design how technology serves classrooms, students, and communities. We start with teacher wisdom, not imported solutions.</p>
 
   <div class="cta-group">
     <a href="/teachers/" class="btn btn-primary">Join the Founding Teacher Alliance</a>
-    <a href="/institutions/" class="btn btn-secondary">For institutions and partners</a>
+    <a href="/institutions/" class="btn btn-secondary">See what we're building</a>
   </div>
 </section>
 
